# sdk_deploy

./: .gitignore  Contributors.md  README.md  artefacts.yaml  pixi.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/Lite3_sdk_deploy/: CMakeLists.txt  main.cpp  package.xml
src/Lite3_sdk_deploy/Lite3_description/lite3_mjcf/mid360/: mid360.xml
src/Lite3_sdk_deploy/Lite3_description/lite3_mjcf/mid360/assets/: mid360.mtl
src/Lite3_sdk_deploy/Lite3_description/lite3_mjcf/mjcf/: Lite3.xml  Lite3_stair.xml  scene.xml  stairs_floors.xml
src/Lite3_sdk_deploy/Lite3_description/lite3_mjcf/realsense_d435i/: d435i.xml
src/Lite3_sdk_deploy/config/: autonomous_mapping_launch.py  f310_holonomic.yaml  mapping.rviz  mapping_lidar.rviz  mapping_lidar_costmaps.rviz  mapping_rgbd.rviz  mapping_rgbd_costmaps.rviz  mapping_rgbd_lidar.rviz  mapping_rgbd_lidar_costmaps.rviz  nav2_humble_alternatives.yaml  nav2_params.yaml  navigation.rviz  rtabmap_launch.py  slam_toolbox_params.yaml  teleop.rviz  trace.yaml
src/Lite3_sdk_deploy/include/types/: custom_types.h
src/Lite3_sdk_deploy/include/utils/: joints_data_shadow_subscriber.hpp  topic_trace.hpp
src/Lite3_sdk_deploy/interface/robot/hardware/: dds_interface.hpp  lite3_interface.hpp
src/Lite3_sdk_deploy/interface/robot/launch/: autonomous_mapping.launch.py  mujoco_simulation_ros2.launch.py  rtabmap_lidar.launch.py  rtabmap_rgbd.launch.py  rtabmap_rgbd_lidar.launch.py  sim_policy_teleop.launch.py  sim_rail_target_follow.launch.py
src/Lite3_sdk_deploy/interface/robot/simulation/: auto_waypoint_navigator.py  depth_sensor.py  lidar_sensor.py  mujoco_simulation_ros2.py  policy_runner.py  procedural_scene_generator.py
src/Lite3_sdk_deploy/interface/robot/simulation/scenes/: procedural_railroad_scene.py  procedural_scene_generator.py
src/Lite3_sdk_deploy/interface/robot/simulation/sensors/: depth_sensor.py  follow_camera_recorder.py  lidar_sensor.py  mid360_lidar_sensor.py
src/Lite3_sdk_deploy/interface/user_command/: retroid_gamepad_interface.hpp  twist_interface.hpp
src/Lite3_sdk_deploy/policy/: policy.onnx
src/Lite3_sdk_deploy/state_machine/: state_machine_base.h
src/Lite3_sdk_deploy/state_machine/quadruped/: joint_damping_state.hpp  q_state_machine.hpp
src/Lite3_sdk_deploy/test/: test_sim_rail_target_follow_distance.py
src/M20_sdk_deploy/: CMakeLists.txt  README.md  main.cpp  package.xml
src/M20_sdk_deploy/M20_description/m20_mjcf/mjcf/: M20.xml  M20_stair.xml
src/M20_sdk_deploy/include/types/: common_types.h  custom_types.h
src/M20_sdk_deploy/include/utils/: basic_function.hpp  thread_pool.hpp
src/M20_sdk_deploy/interface/network/: heartbeat.hpp  udp_server.hpp
src/M20_sdk_deploy/interface/robot/hardware/: m20_interface.hpp
src/M20_sdk_deploy/interface/robot/simulation/: mujoco_simulation_ros2.py
src/M20_sdk_deploy/interface/user_command/: gamepad_interface.hpp  keyboard_interface.hpp
src/M20_sdk_deploy/run_policy/: m20_policy_runner.hpp  policy_runner_base.hpp
src/M20_sdk_deploy/state_machine/: state_machine_base.h
src/M20_sdk_deploy/state_machine/parameters/: control_parameters.h
src/M20_sdk_deploy/state_machine/quadruped_wheel/: liedown_state.hpp  qw_state_machine.hpp  rl_control_state.hpp  standup_state.hpp
src/lite3_sdk_service/: CMakeLists.txt  package.xml  setup_service.sh
src/lite3_sdk_service/config/: trace.yaml
src/lite3_sdk_service/service/: lite3_sdk_service.hpp  sdk_service_trace.hpp
src/lite3_transfer/: CMakeLists.txt  package.xml
src/lite3_transfer/config/: trace.yaml
src/lite3_transfer/interface/gemepad_command/: gamepad_interface.h
src/lite3_transfer/interface/robot/: udp_interface.hpp
src/lite3_transfer/types/: topic_trace.hpp
src/rail_inspector/: README.md  package.xml  setup.cfg  setup.py
src/rail_inspector/rail_inspector/: rail_detector_node.py  rail_inspect_controller.py  rail_target_follower_node.py
src/simple_local_heightmap/: README.md  package.xml  setup.cfg  setup.py
src/simple_local_heightmap/simple_local_heightmap/: heightmap_visualization.py  local_heightmap_node.py  rail_detector_node.py  rail_detector_visualization.py  rail_target_follower_node.py
