<?xml version="1.0"?>
<package format="3">
  <name>lite3_sdk_deploy</name>
  <version>1.3.0</version>
  <description>RL deploy</description>
  <maintainer email="haokaidai.zju@gmail.com">Haokai Dai</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>drdds</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rail_inspector</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_camera_msgs</exec_depend>
  <exec_depend>simple_local_heightmap</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
