<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lite3_sdk_service</name>
  <version>0.0.1</version>
  <description>Standalone UDP-based control service for starting/stopping lite3_transfer node and setting its publish rate.</description>

  <maintainer email="haokaidai.zju@gmail.com">Haokai Dai</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>drdds</depend>
  <depend>lite3_transfer</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
